--- a/whitesource.config
+++ b/whitesource.config
@@ -1,2 +1,3 @@
 npm.includeDevDependencies=false
 excludes=*/., **/node_modules, **/src/test, **/testdata, **/*sources.jar, **/*javadoc.jar
+transitiveRemediation=True
