--- a/whitesource.config
+++ b/whitesource.config
@@ -1,3 +1,3 @@
 npm.includeDevDependencies=false
-excludes=*/., **/node_modules, **/src/test, **/testdata, **/*sources.jar, **/*javadoc.jar
-npm.transitiveRemediation=true
+excludes=*/., **/node_modules, **/src/test123, **/testdata, **/*sources.jar, **/*javadoc.jar
+
