--- a/whitesource.config
+++ b/whitesource.config
@@ -1,3 +1,4 @@
 npm.includeDevDependencies=false
+npm.runPreStep=false
 excludes=*/., **/node_modules, **/src/test123, **/testdata, **/*sources.jar, **/*javadoc.jar
 
