--- a/whitesource.config
+++ b/whitesource.config
@@ -1,4 +1,4 @@
 npm.includeDevDependencies=false
-npm.runPreStep=false
+npm.runPreStep=true
 excludes=*/., **/node_modules, **/src/test123, **/testdata, **/*sources.jar, **/*javadoc.jar
 
